ejs para vite + react

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>.: Clebson Moura | Full Stack Developer :.</title>
-    <script type="module" crossorigin src="/assets/index.ff2cfce7.js"></script>
-    <link rel="stylesheet" href="/assets/index.15a98e7d.css">
   </head>
   <body class="max-w-screen-xl mx-auto bg-gray-200">
     <div id="root"></div>
-    
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
