--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>.: Clebson Moura | Full Stack Developer :.</title>
   </head>
-  <body class="max-w-screen-xl mx-auto bg-gray-200">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
