--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
       name="twitter:description"
       content="Portfolio of Clebson Moura, Full Stack Developer."
     />
-    <meta name="twitter:image:src" content="/img/profile.jpg" />
+    <meta
+      name="twitter:image:src"
+      content="https://clebson.me/img/profile.jpg"
+    />
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Clebson Moura | Full Stack Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.clebson.me" />
-    <meta property="og:image" content="/img/profile.jpg" />
-    <meta property="og:tag" content="/img/profile.jpg" />
+    <meta property="og:url" content="https://clebson.me" />
+    <meta property="og:image" content="https://clebson.me/img/profile.jpg" />
+    <meta property="og:tag" content="https://clebson.me/img/profile.jpg" />
     <meta
       property="og:description"
       content="Portfolio of Clebson Moura, Full Stack Developer."
