--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       name="description"
       content="Portfolio of Clebson Moura, Full Stack Developer."
     />
+
+    <meta name="author" content="Clebson Moura(clebson.sh@gmail.com)" />
+
     <meta name="robots" content="index,follow,archive" />
     <meta
       name="keywords"
